WIP adding counters and metrics
